--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ docutils==0.19
 email-validator==1.3.1
 et-xmlfile==1.1.0
 exceptiongroup==1.1.1
+fastapi==0.95.0
 Flask==2.2.3
 Flask-AppBuilder==4.1.4
 Flask-Babel==2.0.0
@@ -92,6 +93,7 @@ pluggy==1.0.0
 prison==0.2.1
 psutil==5.9.4
 pycparser==2.21
+pydantic==1.10.7
 Pygments==2.14.0
 PyJWT==2.6.0
 pyrsistent==0.19.3
@@ -116,6 +118,7 @@ SQLAlchemy==1.4.47
 SQLAlchemy-JSONField==1.0.1.post0
 SQLAlchemy-Utils==0.40.0
 sqlparse==0.4.3
+starlette==0.26.1
 tabulate==0.9.0
 tenacity==8.2.2
 termcolor==2.2.0
@@ -125,6 +128,7 @@ typing-extensions==4.5.0
 uc-micro-py==1.0.1
 unicodecsv==0.14.1
 urllib3==1.26.15
+uvicorn==0.21.1
 Werkzeug==2.2.3
 wrapt==1.15.0
 WTForms==3.0.1
